--- a/node/views/chat.pug
+++ b/node/views/chat.pug
@@ -24,3 +24,7 @@ html
 				input(id='message-input')
 				input(type='hidden' id='user-id' value=id)
 				button(type='submit' id='send-message') Send
+			div(id='add-node-container')
+				span Add a friend's url!
+				input(id='other-url')
+				button(type='submit' id='add-friend') Add
